--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "@nivo/pie": "^0.79.1",
     "lucide-react": "^0.308.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^4.0.0"
+  },
+  "vercel": {
+    "buildCommand": "npm run build",
+    "outputDirectory": "dist",
+    "framework": "react"
   }
 }
+
+
