--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nivo/pie": "^0.79.1",
+    "@nivo/core": "^0.83.0",
+    "@nivo/pie": "^0.83.0",
+    "@nivo/tooltip": "^0.83.0",
     "lucide-react": "^0.308.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
