--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@nivo/core": "^0.83.0",
+    "@nivo/legends": "^0.83.1",
     "@nivo/pie": "^0.83.0",
     "@nivo/tooltip": "^0.83.0",
     "lucide-react": "^0.308.0",
